exports[`Alert should handle 400 error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    ☹
  </span>
  <span
    className="alert__message">
    error
  </span>
</p>
`;

exports[`Alert should handle 403 error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    ⛔️
  </span>
  <span
    className="alert__message">
    You don’t have permission to access this Spreadsheet.
  </span>
</p>
`;

exports[`Alert should handle 404 error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    ❓
  </span>
  <span
    className="alert__message">
    Spreadsheet not found.
  </span>
</p>
`;

exports[`Alert should handle 503 error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    ⌚
  </span>
  <span
    className="alert__message">
    Service unavailable.
  </span>
</p>
`;

exports[`Alert should handle default error 1`] = `
<p
  className="alert">
  <span
    className="alert__icon">
    💀
  </span>
  <span
    className="alert__message">
    Doh, I couldn’t load the data.
  </span>
</p>
`;
